syntax = "proto3";

package cart;

option go_package = '/cart';

service CartService {
    rpc AddItem(AddItemReq) returns (AddItemResp) {}
    rpc GetCart(GetCartReq) returns (GetCartResp) {}
    rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {}
    rpc ChangeQty(ChangeQtyReq) returns (ChangeQtyResp){}
}

message CartItem {
    uint32 product_id = 1;
    uint32  quantity = 2;
}

message AddItemReq {
    uint32 user_id = 1;
    CartItem item = 2;
}

message AddItemResp {}

message GetCartReq {
    uint32 user_id = 1;
}

message Cart {
    uint32 user_id = 1;
    repeated CartItem items = 2;
}

message GetCartResp {
    Cart cart = 1;
}

// 新增
message EmptyCartReq {
    uint32 user_id = 1;
}

// 新增
message EmptyCartResp {}

// 新增
message ChangeQtyReq{
    uint32 user_id = 1;
    CartItem item = 2;
}

// 新增
message ChangeQtyResp{}
