syntax = "proto3";

package order;

import "cart.proto";

option go_package = "/order";

service OrderService {
    rpc PlaceOrder(PlaceOrderReq) returns (PlaceOrderResp) {}
    rpc ListOder(ListOrderReq) returns (ListOrderResp) {}
    rpc ChangeOrderStatus(ChangeOrderStatusReq) returns (ChangeOrderStatusResp) {}
}

// 更改订单状态
message ChangeOrderStatusReq {
    string order_id = 1;
    uint32 order_status = 2;
}

message ChangeOrderStatusResp {}

message Address {
    string street_address = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string zip_code = 5;
}

message OrderItem {
    cart.CartItem item = 1;
    float cost = 2;
}

message PlaceOrderReq {
    uint32 user_id = 1;
    string user_currency = 2;
    Address address = 3;
    string email = 4;
    repeated OrderItem items = 5;
}

message OrderResult {
    string order_id = 1;
}

message PlaceOrderResp {
    OrderResult order = 1;
}

message ListOrderReq {
    uint32 user_id = 1;
}

message Order {
    repeated OrderItem items = 1;
    string order_id = 2;
    uint32 user_id = 3;
    uint32 order_status = 4; // 订单状态 0 - 创建订单待支付 1 - 支付成功 2 - 支付失败 3 - 取消订单
    string user_currency = 5;
    Address address = 6;
    string email = 7;
    int32 created_at = 8;
}

message ListOrderResp {
    repeated Order orders = 1;
}