syntax = "proto3";

package payment;

option go_package = "payment";

service PaymentService {
    rpc Charge(ChargeReq) returns (ChargeResp) {}
    rpc Alipay(AlipayReq) returns (AlipayResp) {}
}

message CreditCardInfo {
    string credit_cart_number = 1;
    int32 credit_card_cvv = 2;
    int32 credit_card_expiration_year = 3;
    int32 credit_card_expiration_month = 4;
}

message ChargeReq {
    float amount = 1;
    CreditCardInfo credit_card = 2;
    string order_id = 3;
    uint32 user_id = 4;
}

message ChargeResp {
    string transaction_id = 1;
}

message AlipayReq{
    string transaction_id = 1;
    string total_amount = 2;
}

message AlipayResp{
    string payUrl = 1;
}